Fix transparency value on mobile nav overlay

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2920,7 +2920,7 @@ footer {
     left: 0;
     text-align: center;
     margin: 0;
-    background: rgba(197, 89, 81, 0.99);
+    background: rgba(197, 89, 81, 0.98);
     transition: all .3s ease-in-out;
     width: 100%;
     height: 100vh; }
