--- a/sass/partials/_media-queries.scss
+++ b/sass/partials/_media-queries.scss
@@ -331,7 +331,7 @@
       left: 0;
       text-align: center;
       margin: 0;
-      background: rgba(197,89,81,.99);
+      background: rgba(197,89,81,.98);
       transition: all .3s ease-in-out;
       width: 100%;
       height: 100vh;
